--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {% load staticfiles %}
-
+     {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    
 
-    <title>Chakir El Yattafti</title>
+    <title>Chakir's Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -18,58 +17,47 @@
   </head>
 
   <body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <header>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="{% url 'home' %}">Chakir El Yattafti</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="https://linkedin.com/in/chakirelyattafti" target="_blank">LinkedIn</a>
-          <a class="nav-item nav-link" href="{% static 'resumé.pdf' %}" target="_blank">Resume</a>
-          <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+          <a class="nav-item nav-link" href="https://linkedin.com/in/chakirelyattafti">LinkedIn</a>
+          <a class="nav-item nav-link" href="{% static 'resumé.pdf' %}">Resume</a>
+          <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
     </nav>
-  </header>  
+ </header>
 
     <main role="main">
+      <div class="container">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Hello, I am Chakir!</h1>
-          <p class="lead text-muted">You are Welcome to my site and I hope you enjoy it.</p>
-          <p>
-            <a href="mailto:chakirely@gmail.com" class="btn btn-primary my-2">Email Me</a>
-            
-          </p>
-          <img src="{% static 'Chakir.jpg' %}" />
-        </div>
-      </section>
+         <h1 class="text-center pt-4">Welcome to Chakir's Blog</h1>
+         <br />
+         <br />
+         <h2>Latest Posts</h2>
+         <hr />
 
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-            {% for job in jobs.all %}
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" src="{{ job.image.url }}" />
-                <div class="card-body">
-                  <p class="card-text">{{job.summary}}</p>
-
-
-                  
-                </div>
-              </div>
-            </div>
-            {% endfor %}
+         {% for blog in blogs.all %}
+         <a href="{%  url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+         {{ blog.pub_date_pretty }}
+         <br/>
+         <img class="img-fluid" src="{{ blog.image.url }}" height="250" width="300" />
+          <br />
+         <p>{{blog.summary}}</p>
+         {% endfor %}
+      
+      </div>
                
     </main>
 
+
     <footer class="text-muted">
-      ++
+      
       <div class="container text-center">
         
         </p>
