updating the resume name in home.htm

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="https://linkedin.com/in/chakirelyattafti" target="_blank">LinkedIn</a>
-          <a class="nav-item nav-link" href="{% static 'resumé.pdf' %}" target="_blank">Resume</a>
+          <a class="nav-item nav-link" href="{% static 'Resume.pdf' %}" target="_blank">Resume</a>
           <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
         </div>
       </div>
